# Wordle

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
core/: Answer.py  Benchmark.py  FastSolver.py  Game.py  GuessScore.py  Interface.py  InterfaceGame.py  InterfaceGameSolver.py  InterfaceSolver.py  Solver.py  fast_solver.py  solver_accel.pyx  timing.py  ui_components.py  utils.py
core/Scorers/: EntropyScorer.py  GroupScorer.py  GuessScorer.py  ProbabilisticScorer.py  StdScorer.py
