[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "Cython>=3.0",
    "numpy>=2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "wordle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0",
    "numpy>=2.5.0",
    "rich>=13.7.0",
    "tyro>=1.0.15",
]
